Stabilized version numbers of dev deps

--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   "devDependencies": {
     "buster": "~0.6.12",
     "grunt": "~0.4.0",
-    "grunt-contrib-jshint": "latest",
+    "grunt-contrib-jshint": "0.1.1rc6",
     "grunt-contrib-requirejs": "~0.3.4",
     "grunt-buster": "~0.1.2",
-    "grunt-contrib-watch": "latest"
+    "grunt-contrib-watch": "0.2.0rc7"
   }
 }
